--- a/style.css
+++ b/style.css
@@ -30,3 +30,19 @@ header {
   padding-top: 10px;
   font-size: 20px;
 }
+
+.heading {
+  padding-top: 90px;
+  text-align: center;
+  font-family: 'Raleway', sans-serif;
+  font-size: 32px;
+}
+
+.heading::after {
+  content: "";
+  display: block;
+  width: 70px;
+  height: 3px;
+  margin: 8px auto 0 auto;
+  background-color: #ec715f;
+}
